@@ -1,0 +1,31 @@
+b5d5bce613c5f265bb9703cc2c4f8f89 *ChangeLog
+c4a05a5d1e92c5affc300ceec9fee9fa *DESCRIPTION
+4371c52c8e060302e3f24d7dab7c2888 *NAMESPACE
+e7468d850a0cbf123b668cec8f4d8815 *R/genOpenBugsScript.R
+fdd8ae1f6cc1b4055ffc92fe1a1ef95f *R/print.rbugs.R
+371841d66e059b2ef8d012134eca3269 *R/rbugs.R
+a74e9212a05db8d1c7c4467e48722039 *R/rbugs2coda.R
+a78c6b7d4d5ce9a06c2b7e0ce4ef6b97 *R/utils.R
+3aeb920023a0e310681829c4fdc67bfb *R/zzz.R
+8583a2a855b60bfe7afbf867ee943d66 *data/pumps.tab.gz
+5c60111e7fd98d981bdf04b5a67bab22 *data/schools.tab.gz
+8218f50b6ffd2fb156ae1410b4809e7f *inst/OpenBUGS/Script.txt
+daf543353996bde5188f673b4e546197 *inst/bugs/data/kidney.txt
+9277e15d358f86d6217e352adfe8cf87 *inst/bugs/inits/kidney.txt
+c5e6842ab1d8a5d95fdfaba673cab167 *inst/bugs/inits/pumps.txt
+65958b7d8900aefecc8efd8e490750a6 *inst/bugs/model/kidney.bug
+db6bb71fd0b2c175569d9c8e31776dbe *inst/bugs/model/pumps.bug
+81e0adcb4eb12c3d15c87ec93cca2e96 *inst/bugs/model/schools.bug
+9ac2736599c9664d38075bb0922a0c1a *inst/docs/rnews_rbugs.pdf
+955b7553a686ddc76892b5463a93f8ce *man/format4Bugs.Rd
+90755dc2d2a260843a673aa9a6286bae *man/formatData.Rd
+9ec994af812ec573ca7e58ae9c220f7e *man/genBugsScript.Rd
+a1f02169fc833400505fa07048b397cb *man/genDataFile.Rd
+75e2a9c8be83aca9c5a42e9bf84ae5c5 *man/genInitsFile.Rd
+cba57a57d045b37e41a6340f33e11dfb *man/getBugsOutput.Rd
+0c2c97a9f9f3c6ddb5e7cff44b775272 *man/print.rbugs.Rd
+b75fb4abb8c43ce3bc8f56e536164d06 *man/pumps.Rd
+1f66f7a52c0391453b547fedf853c0a1 *man/rbugs.Rd
+40b98cd2843c10ee1b3da6299a1ca7ea *man/rbugs2coda.Rd
+177591c6bef7786ef0884363b980fdb4 *man/runBugs.Rd
+ca23a10bb9e09475fdd9fe9c26a9871b *man/schools.Rd
