@@ -1,11 +1,0 @@
-"t"	"x"
-94.3	5
-15.7	1
-62.9	5
-126	14
-5.24	3
-31.4	19
-1.05	1
-1.05	1
-2.1	4
-10.5	22
