@@ -1,9 +1,0 @@
-school estimate sd
-A  28  15
-B   8  10
-C  -3  16
-D   7  11
-E  -1   9
-F   1  11
-G  18  10
-H  12  18
